--- a/Ana-Dosya/20-Test-Sayfasi/12-Test/2-Haberler/index.html
+++ b/Ana-Dosya/20-Test-Sayfasi/12-Test/2-Haberler/index.html
@@ -135,7 +135,7 @@ padding: 0px 6px;
   
   <div id="channels">
     <div id="input-section">
-
+  <a href="https://turis-tv.github.io/Turis-2025/Ana-Dosya/20-Test-Sayfasi/12-Test/index.html" target="_blank" class="myButton">Ana Sayfa</a>
       <input type="text" id="live-url-input" placeholder="Ara ...">
         
       <a onclick="playLive()" href="#/" class="but">▶</a>
