--- a/Ana-Dosya/20-Test-Sayfasi/12-Test/index.html
+++ b/Ana-Dosya/20-Test-Sayfasi/12-Test/index.html
@@ -35,11 +35,12 @@
         <div class="container">
             <input type="checkbox" name="" id="" class="btn" />
             <div class="list">
-               <a href="#"> <i class='fas fa-tv' style='font-size:20px;color:red'></i></i>&nbsp&nbsp&nbsp&nbspUlusal</a>
+               <a href="1-Ulusal/index.html"> <i class='fas fa-tv' style='font-size:20px;color:red'></i></i>&nbsp&nbsp&nbsp&nbspUlusal</a>
                  <a href="2-Haberler/index.html"><i class='far fa-clock' style='font-size:20px;color:red'></i></i>&nbsp&nbsp&nbsp&nbspHaberler</a>
                  <a href="3-Muzik/index.html"><i class='fas fa-music' style='font-size:20px;color:red'></i></i>&nbsp&nbsp&nbsp&nbspMuzikler</a>
                    <a href="#"><i class='fas fa-spider' style='font-size:20px;color:red'></i></i>&nbsp&nbsp&nbsp&nbspBelgesel</a>
                 <a href="#"> <i class='fas fa-volleyball-ball' style='font-size:20px;color:red'></i></i>&nbsp&nbsp&nbsp&nbspSpor</a>
+                <a href="10-Film-Kanallari/index.html"> <i class='fas fa-volleyball-ball' style='font-size:20px;color:red'></i></i>&nbsp&nbsp&nbsp&nbspFilm Kanallari</a>
                <a href="https://turis-tv.github.io/Turis-2025/Ana-Dosya/Menu.html"><i class='fas fa-sign-out-alt' style='font-size:25px;color:red'></i></i>&nbsp&nbsp&nbspÇıkış</a>
             
             </div>
