--- a/Ana-Dosya/20-Test-Sayfasi/16-Player/index.html
+++ b/Ana-Dosya/20-Test-Sayfasi/16-Player/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Untitled</title>
-  <link rel="stylesheet" href="Css.Script/style.css">
+  <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
@@ -25,61 +25,53 @@
 
 
 
-<div id="channel-list"><div class="channel" data-url="stream.tvcdn.net/ulusal/trt-1.m3u8 ">
-<img src="http://assets.tvcdn.net/1045ea2f-2453-451d-a55f-ba17539641dd.png" alt="Trt 1"><p>Trt 1| a 🇹🇷</p>
+<div id="channel-list"><div class="channel" data-url="stream.tvcdn.net/ulusal/trt-1.m3u8">
+<img src="http://assets.tvcdn.net/1045ea2f-2453-451d-a55f-ba17539641dd.png" alt="TRT 1"><p>TRT 1 🇹🇷</p>
 
-</div><div class="channel" data-url="stream.tvcdn.net/ulusal/atv.m3u8 ">
-<img src="http://assets.tvcdn.net/89a47b4b-5d20-4248-9f4c-a3d2756072dd.png" alt="Atv"><p>Atv | b 🇹🇷 </p>
+</div><div class="channel" data-url="stream.tvcdn.net/ulusal/atv.m3u8">
+<img src="http://assets.tvcdn.net/89a47b4b-5d20-4248-9f4c-a3d2756072dd.png" alt="Atv"><p>Atv 🇹🇷 </p>
 
-</div><div class="channel" data-url="stream.tvcdn.net/ulusal/kanal-d.m3u8 ">
-<img src="http://assets.tvcdn.net/a06096dc-fd5e-4103-bfb4-83e612df23ec.png" alt="Atv Eu"><p>Atv Eu 🇹🇷 </p>
+</div><div class="channel" data-url="stream.tvcdn.net/ulusal/kanal-d.m3u8">
+<img src="http://assets.tvcdn.net/a06096dc-fd5e-4103-bfb4-83e612df23ec.png" alt="Kanal D"><p>Kanal D 🇹🇷 </p>
 
-</div><div class="channel" data-url="tgn.bozztv.com/dvrfl05/gin-atvavrupa/tracks-v1a1/mono.m3u8">
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRFUk0AdkpKqBSM6b7cfk05DZo4evBHDjjBbQ&s" alt="Kanal D"><p>Kanal D 🇹🇷 </p>
-
-</div><div class="channel" data-url="stream.tvcdn.net/ulusal/now-tv.m3u8 ">
+</div><div class="channel" data-url="stream.tvcdn.net/ulusal/now-tv.m3u8">
 <img src="http://assets.tvcdn.net/80eb8816-1855-41f5-9002-7a05cc93fe4f.png" alt="Now TV"><p>Now TV 🇹🇷 </p>
 
 </div><div class="channel" data-url="stream.tvcdn.net/ulusal/show-tv.m3u8">
-<img src="http://assets.tvcdn.net/9d873881-bb5e-40f0-88db-8c47aa215e5a.png" alt="Show TV"><p>Show TV 🇹🇷 </p>
+<img src="http://assets.tvcdn.net/9d873881-bb5e-40f0-88db-8c47aa215e5a.png" alt="SHOW TV"><p>Show Tv 🇹🇷 </p>
 
 </div><div class="channel" data-url="stream.tvcdn.net/ulusal/beyaz-tv.m3u8">
 <img src="http://assets.tvcdn.net/60d7aaf4-817b-46be-bbab-68f8b30de8fb.png" alt="Beyaz TV"><p>Beyaz TV 🇹🇷 </p>
 
 </div><div class="channel" data-url="stream.tvcdn.net/ulusal/kanal-7.m3u8">
-<img src="http://assets.tvcdn.net/1125734c-3525-4390-b8ed-c50380c70e4d.png" alt="Kanal 7"><p>Kanal 7 🇹🇷 </p>
+<img src="http://assets.tvcdn.net/1125734c-3525-4390-b8ed-c50380c70e4d.png" alt="Kanal 7"><p>Kanal 7 🇹🇷</p>
 
 </div><div class="channel" data-url="stream.tvcdn.net/ulusal/tv8.m3u8">
-<img src="http://assets.tvcdn.net/f91342d2-bcae-4ee0-a6f8-76a8d32b891b.png" alt="TV8"><p>TV8 🇹🇷 </p>
+<img src="http://assets.tvcdn.net/f91342d2-bcae-4ee0-a6f8-76a8d32b891b.png" alt="TV8"><p>TV8 🇹🇷</p>
 
-</div><div class="channel" data-url="stream.tvcdn.net/ulusal/star-tv.m3u8 ">
-<img src="http://assets.tvcdn.net/0c5204fb-e613-4084-b300-8cdcc46309f9.png " alt="Star TV"><p>Star TV 🇹🇷 </p>
+</div><div class="channel" data-url="stream.tvcdn.net/ulusal/star-tv.m3u8">
+<img src="http://assets.tvcdn.net/0c5204fb-e613-4084-b300-8cdcc46309f9.png" alt="Star TV "><p>Star TV  🇹🇷</p>
 
 </div><div class="channel" data-url="stream.tvcdn.net/ulusal/360-tv.m3u8">
-<img src="http://assets.tvcdn.net/e1c3f150-4f79-4ac4-a893-4cc1144eb2d5.png " alt="360 TV"><p>360 🇹🇷 </p>
+<img src="http://assets.tvcdn.net/e1c3f150-4f79-4ac4-a893-4cc1144eb2d5.png" alt="360 TV"><p>360 TV 🇹🇷</p>
 
 </div><div class="channel" data-url="stream.tvcdn.net/ulusal/tv-100.m3u8">
-<img src="http://assets.tvcdn.net/d7741078-ccce-47d8-ba1c-a041b659bad6.png " alt="TV 100"><p>TV 100 🇹🇷 </p>
+<img src="http://assets.tvcdn.net/d7741078-ccce-47d8-ba1c-a041b659bad6.png" alt="TV 100"><p>TV 100 🇹🇷</p>
 
-</div><div class="channel" data-url="stream.tvcdn.net/ulusal-yurt-disi/trt-turk.m3u8 ">
-<img src="http://assets.tvcdn.net/fbaaa75c-0a2d-4ed6-b498-d32a59ddb899.png " alt="TRT Türk"><p>TRT Türk 🇹🇷 </p>
-
-</div><div class="channel" data-url="tgn.bozztv.com/dvrfl05/gin-atvavrupa/tracks-v1a1/mono.m3u8">
-<img src="http://assets.tvcdn.net/fbaaa75c-0a2d-4ed6-b498-d32a59ddb899.png " alt="TRT Türk"><p>TRT Türk 🇹🇷 </p>
+</div><div class="channel" data-url="stream.tvcdn.net/ulusal-yurt-disi/trt-turk.m3u8">
+<img src="http://assets.tvcdn.net/fbaaa75c-0a2d-4ed6-b498-d32a59ddb899.png"><p>TRT Türk 🇹🇷</p>
 
 </div><div class="channel" data-url="stream.tvcdn.net/ulusal-yurt-disi/trt-avaz.m3u8">
-<img src="http://assets.tvcdn.net/53dd1d5f-aa72-4bea-91d0-8c2d00783367.png " alt="TRT Avaz"><p>TRT Avaz 🇹🇷 </p>
+<img src="http://assets.tvcdn.net/53dd1d5f-aa72-4bea-91d0-8c2d00783367.png"><p>TRT Avaz 🇹🇷</p>
 
 </div><div class="channel" data-url="stream.tvcdn.net/ulusal-yurt-disi/euro-d.m3u8">
-<img src="http://assets.tvcdn.net/f4a83153-48c6-4ece-8082-1b370768f88a.png " alt="Euro D"><p>Euro D 🇹🇷 </p>
+<img src="http://assets.tvcdn.net/f4a83153-48c6-4ece-8082-1b370768f88a.png" alt="Euro D"><p>Euro D 🇹🇷</p>
 
 </div><div class="channel" data-url="stream.tvcdn.net/ulusal-yurt-disi/tgrt-eu.m3u8">
-<img src="http://assets.tvcdn.net/01032651-eac6-48ea-b6ef-78acf8e95daa.png " alt="Euro D"><p>Euro D 🇹🇷 </p>
+<img src="http://assets.tvcdn.net/01032651-eac6-48ea-b6ef-78acf8e95daa.png" alt="TGRT EU"><p>TGRT EU 🇹🇷</p>
 
-</div><div class="channel" data-url="stream.tvcdn.net/ulusal-yurt-disi/show-turk.m3u8 ">
-<img src="http://assets.tvcdn.net/d4d340ec-891e-4601-9776-e979a750b7e3.png " alt="Show Türk"><p>Show Türk 🇹🇷 </p>
-
-
+</div><div class="channel" data-url="stream.tvcdn.net/ulusal-yurt-disi/show-turk.m3u8">
+<img src="https://assets.tvcdn.net/d4d340ec-891e-4601-9776-e979a750b7e3.png" alt="Show Türk"><p>Show Türk 🇹🇷</p>
 
 
 
@@ -94,7 +86,7 @@
 </div></div></section><!-- Footer --><footer><p>&copy; 2025 IPTV Turis Tv App. All rights reserved.</p>
 </footer></div><!-- Link to JavaScript --><script src="app.js"></script></body></html>
 <!-- partial -->
-  <script  src="Css.Script/script.js"></script>
+  <script  src="./script.js"></script>
 
 </body>
 </html>
