--- a/Ana-Dosya/20-Test-Sayfasi/Test-Menu.html
+++ b/Ana-Dosya/20-Test-Sayfasi/Test-Menu.html
@@ -357,6 +357,16 @@ background-image: -webkit-linear-gradient(top, #bc1115 100%, #000 100%);
 <h2>16-Player</h2>
 </button>
 
+<button onclick="window.open('18-Test/index.html')">
+<img src="https://od.lk/s/OTFfMjkxMTE0NDBf/VlP3Vv%20%283%29.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
+<h2>18-Player</h2>
+</button>
+
+
+
+
+
+
 
 </div>
 
