--- a/Ana-Dosya/20-Test-Sayfasi/18-Test/4-Movie/index.html
+++ b/Ana-Dosya/20-Test-Sayfasi/18-Test/4-Movie/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="bilel .bn">
 <head>
   <meta charset="UTF-8">
-  <title>Untitled</title>
+  <title>Turis Tv</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -121,7 +121,7 @@
 <img src="https://image.kanald.com.tr/i/kanald/100/264x111/5e849a9ee2260103fc70491d.jpg " alt="Podyumdaki Kül Kedisi "><p>Podyumdaki Kül Kedisi </p>
 
 </div><div class="channel" data-url="kanaldvod.duhnet.tv/S11/HLS_VOD/279154_127c/index.m3u8">
-<img src="https://image.kanald.com.tr/i/kanald/100/264x111/5e84a14ce2260103fc704a84.jpg " alt="Evde Sinema",Agorafobi "><p>Evde Sinema",Agorafobi </p>
+<img src="https://image.kanald.com.tr/i/kanald/100/264x111/5e84a14ce2260103fc704a84.jpg " alt="Evde Sinema",Agorafobi "><p>Agorafobi </p>
 
 </div><div class="channel" data-url="kanaldvod.duhnet.tv/S11/MP4/KANALD/HDP1A_-279180_12b0-_1500.mp4">
 <img src="https://image.kanald.com.tr/i/kanald/100/264x111/5e84a247e2260103fc704a9b.jpg " alt="Karartma "><p>Karartma </p>
