--- a/Ana-Dosya/20-Test-Sayfasi/18-Test/index.html
+++ b/Ana-Dosya/20-Test-Sayfasi/18-Test/index.html
@@ -46,6 +46,7 @@
                 <a href="#"> <i class='fas fa-volleyball-ball' style='font-size:20px;color:red'></i></i>&nbsp&nbsp&nbsp&nbsp5-Izle</a>
                 <a href="4-Movie/index.html"> <i class='fas fa-film' style='font-size:20px;color:red'></i></i>&nbsp&nbsp&nbsp&nbsp4-Movie</a>
                <a href="../index.html"><i class='fas fa-sign-out-alt' style='font-size:25px;color:red'></i></i>&nbsp&nbsp&nbspÇıkış</a>
+               <a href="http://action_exit"><i class='fas fa-sign-out-alt' style='font-size:25px;color:red'></i></i>&nbsp&nbsp&nbspÇıkış</a>
    
             </div>
         </div>
