--- a/Ana-Dosya/20-Test-Sayfasi/18-Test/index.html
+++ b/Ana-Dosya/20-Test-Sayfasi/18-Test/index.html
@@ -43,7 +43,7 @@
                  <a href="2-Haberler/index.html"><i class='far fa-clock' style='font-size:20px;color:red'></i></i>&nbsp&nbsp&nbsp&nbspHaberler</a>
                  <a href="3-Muzik/index.html"><i class='fas fa-music' style='font-size:20px;color:red'></i></i>&nbsp&nbsp&nbsp&nbspMuzikler</a>
                    <a href="4-Film/index.html"><i class='fas fa-spider' style='font-size:20px;color:red'></i></i>&nbsp&nbsp&nbsp&nbsp4-Filml</a>
-                <a href="#"> <i class='fas fa-volleyball-ball' style='font-size:20px;color:red'></i></i>&nbsp&nbsp&nbsp&nbsp5-Izle</a>
+                <a href="8-Test-Bein/index.html"> <i class='fas fa-volleyball-ball' style='font-size:20px;color:red'></i></i>&nbsp&nbsp&nbsp&nbsp8-Bein</a>
                 <a href="4-Movie/index.html"> <i class='fas fa-film' style='font-size:20px;color:red'></i></i>&nbsp&nbsp&nbsp&nbsp4-Movie</a>
                <a href="../index.html"><i class='fas fa-sign-out-alt' style='font-size:25px;color:red'></i></i>&nbsp&nbsp&nbspÇıkış</a>
                <a href="http://action_exit"><i class='fas fa-sign-out-alt' style='font-size:25px;color:red'></i></i>&nbsp&nbsp&nbspÇıkış</a>
