--- a/Ana-Dosya/20-Test-Sayfasi/18-Test/8-Test-Bein/index.html
+++ b/Ana-Dosya/20-Test-Sayfasi/18-Test/8-Test-Bein/index.html
@@ -11,31 +11,33 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shout Bein - 9 Chaînes</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+
     <div class="launcher-container">
         <h1 class="launcher-title">Chaînes Bein Sports VIP</h1>
         
         <div class="channel-grid">
-            <button class="channel-button" data-url="https://livetv.powerapp.com.tr/powerTV/powerhd.smil/chunklist_b1428000_sltur.m3u8">Bein Sport 1 VIP</button>
-            <button class="channel-button" data-url="https://bozztv.com/inim03/live1/showtvturk/playlist.m3u8">Bein Sport 2 VIP</button>
-            <button class="channel-button" data-url="https://dogus-live.daioncdn.net/startv/startv.m3u8">Bein Sport 3 VIP</button>
-            <button class="channel-button" data-url="https://live.artidijitalmedya.com/artidijital_trakyaturk/trakyaturk/playlist.m3u8">Bein Sport 4 VIP</button>
-            <button class="channel-button" data-url="https://demiroren-live.daioncdn.net/teve2/teve2.m3u8">Bein Sport 5 VIP</button>
-            <button class="channel-button" data-url="https://turkmedya-live.ercdn.net/tv4/tv4_720p.m3u8">Bein Sport 6</button>
-            <button class="channel-button" data-url="https://live.artidijitalmedya.com/artidijital_tivi6/tivi6/playlist.m3u8">Bein Sport 7</button>
-            <button class="channel-button" data-url="https://media.finest.tv/hls/live.m3u8">Bein Sport 8 VIP</button>
-            <button class="channel-button" data-url="https://live.artidijitalmedya.com/artidijital_tempotv/tempotv/playlist.m3u8">Bein Sport 9</button>
+<br><br><br><br><br><br><br><br><br><br><br><br>
+            <button class="channel-button" data-url="livetv.powerapp.com.tr/powerTV/powerhd.smil/chunklist_b1428000_sltur.m3u8">Bein Sport 1 VIP</button>
+            <button class="channel-button" data-url="bozztv.com/inim03/live1/showtvturk/playlist.m3u8">Bein Sport 2 VIP</button>
+            <button class="channel-button" data-url="dogus-live.daioncdn.net/startv/startv.m3u8">Bein Sport 3 VIP</button>
+            <button class="channel-button" data-url="live.artidijitalmedya.com/artidijital_trakyaturk/trakyaturk/playlist.m3u8">Bein Sport 4 VIP</button>
+            <button class="channel-button" data-url="demiroren-live.daioncdn.net/teve2/teve2.m3u8">Bein Sport 5 VIP</button>
+            <button class="channel-button" data-url="turkmedya-live.ercdn.net/tv4/tv4_720p.m3u8">Bein Sport 6</button>
+            <button class="channel-button" data-url="live.artidijitalmedya.com/artidijital_tivi6/tivi6/playlist.m3u8">Bein Sport 7</button>
+            <button class="channel-button" data-url="media.finest.tv/hls/live.m3u8">Bein Sport 8 VIP</button>
+            <button class="channel-button" data-url="live.artidijitalmedya.com/artidijital_tempotv/tempotv/playlist.m3u8">Bein Sport 9</button>
         </div>
     </div>
 
-    <footer>
-        <p>© 2025 Turis Tv Bein.</p>
-    </footer>
+
 
     <script src="script.js"></script>
 </body>
