--- a/Ana-Dosya/20-Test-Sayfasi/18-Test/8-Test-Bein/index.html
+++ b/Ana-Dosya/20-Test-Sayfasi/18-Test/8-Test-Bein/index.html
@@ -25,20 +25,13 @@
         
         <div class="channel-grid">
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br><br><br><br><br>
 
 
-<marquee direction=right>Bu Sayfa &nbsp&nbsp  <strong>VLC</strong> &nbsp&nbsp&nbsp  veya &nbsp &nbsp&nbsp  <strong>Oplayer</strong> &nbsp&nbsp   Ile Çalışılır</marquee>
-            <button class="channel-button" data-url="alt.xtream-ie.org/r8E7WzEjY/LLJwdV9mB/7eyJ1cmwiOiJodHRwczovL25yMS5ibHV0di5jb20vYmx1dHZfbjEvYmx1dHZfbjEvcGxheWxpc3QubTN1OCIsImlkIjoyMDF9/fast">Nr1</button>
-            <button class="channel-button" data-url="alt.xtream-ie.org/r8E7WzEjY/LLJwdV9mB/7eyJ1cmwiOiJodHRwczovL25yMXR1cmsuYmx1dHYuY29tL2JsdXR2X24xdHVyay9saXZlLm0zdTgiLCJpZCI6MjAyfQ%3D%3D/fast">Nr1 Türk</button>
-            <button class="channel-button" data-url="alt.xtream-ie.org/r8E7WzEjY/LLJwdV9mB/7eyJ1cmwiOiJodHRwczovL2hlbGdhLmlwdHYyMDIyLmNvbS90cnRfbXV6aWsvaW5kZXgubTN1OCIsImlkIjoyODB9/fast">Trt Müzik</button>
+
+<marquee>Bu Sayfa &nbsp&nbsp  <strong>VLC</strong> &nbsp&nbsp&nbsp  veya &nbsp &nbsp&nbsp  <strong>Oplayer</strong> &nbsp&nbsp   Ile Çalışılır</marquee>
+            <button class="channel-button" data-url="http://alt.xtream-ie.org/r8E7WzEjY/LLJwdV9mB/7eyJ1cmwiOiJodHRwczovL25yMS5ibHV0di5jb20vYmx1dHZfbjEvYmx1dHZfbjEvcGxheWxpc3QubTN1OCIsImlkIjoyMDF9/fast">Nr1</button>
+            <button class="channel-button" data-url="http://alt.xtream-ie.org/r8E7WzEjY/LLJwdV9mB/7eyJ1cmwiOiJodHRwczovL25yMXR1cmsuYmx1dHYuY29tL2JsdXR2X24xdHVyay9saXZlLm0zdTgiLCJpZCI6MjAyfQ%3D%3D/fast">Nr1 Türk</button>
+            <button class="channel-button" data-url="http://alt.xtream-ie.org/r8E7WzEjY/LLJwdV9mB/7eyJ1cmwiOiJodHRwczovL2hlbGdhLmlwdHYyMDIyLmNvbS90cnRfbXV6aWsvaW5kZXgubTN1OCIsImlkIjoyODB9/fast">Trt Müzik</button>
             <button class="channel-button" data-url="alt.xtream-ie.org/r8E7WzEjY/LLJwdV9mB/7eyJ1cmwiOiJodHRwczovL3R2c21zLmNsdWIvdHYucGhwP2thbmFsPWRhbWFyJmZpbGU9Lm0zdTgiLCJpZCI6MzgxfQ%3D%3D/fast">Damar Tv</button>
             <button class="channel-button" data-url="alt.xtream-ie.org/r8E7WzEjY/LLJwdV9mB/7eyJ1cmwiOiJodHRwczovL2xpdmUuZHVobmV0LnR2L1MyL0hMU19MSVZFL2RyZWFtdHVya25wL3BsYXlsaXN0Lm0zdTgiLCJpZCI6MzkyfQ%3D%3D/fast">Dream Türk</button>
             <button class="channel-button" data-url="alt.xtream-ie.org/r8E7WzEjY/LLJwdV9mB/7eyJ1cmwiOiJodHRwczovL21lZGlhLmZpbmVzdC50di9obHMvbGl2ZS5tM3U4IiwiaWQiOjQxMH0%3D/fast">Finest Tv</button>
