--- a/Ana-Dosya/20-Test-Sayfasi/18-Test/8-Test-Bein/index.html
+++ b/Ana-Dosya/20-Test-Sayfasi/18-Test/8-Test-Bein/index.html
@@ -26,40 +26,12 @@
         <div class="channel-grid">
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br>
+
  
 
-<marquee>Bu Sayfa &nbsp&nbsp  <strong>VLC</strong> &nbsp&nbsp&nbsp  veya &nbsp &nbsp&nbsp  <strong>Oplayer</strong> &nbsp&nbsp   Ile Çalışılır</marquee>
-            <button class="channel-button" data-url="http://alt.xtream-ie.org/r8E7WzEjY/LLJwdV9mB/7eyJ1cmwiOiJodHRwczovL25yMS5ibHV0di5jb20vYmx1dHZfbjEvYmx1dHZfbjEvcGxheWxpc3QubTN1OCIsImlkIjoyMDF9/fast">Nr1</button>
-            <button class="channel-button" data-url="http://alt.xtream-ie.org/r8E7WzEjY/LLJwdV9mB/7eyJ1cmwiOiJodHRwczovL25yMXR1cmsuYmx1dHYuY29tL2JsdXR2X24xdHVyay9saXZlLm0zdTgiLCJpZCI6MjAyfQ%3D%3D/fast">Nr1 Türk</button>
-            <button class="channel-button" data-url="http://alt.xtream-ie.org/r8E7WzEjY/LLJwdV9mB/7eyJ1cmwiOiJodHRwczovL2hlbGdhLmlwdHYyMDIyLmNvbS90cnRfbXV6aWsvaW5kZXgubTN1OCIsImlkIjoyODB9/fast">Trt Müzik</button>
-            <button class="channel-button" data-url="alt.xtream-ie.org/r8E7WzEjY/LLJwdV9mB/7eyJ1cmwiOiJodHRwczovL3R2c21zLmNsdWIvdHYucGhwP2thbmFsPWRhbWFyJmZpbGU9Lm0zdTgiLCJpZCI6MzgxfQ%3D%3D/fast">Damar Tv</button>
-            <button class="channel-button" data-url="alt.xtream-ie.org/r8E7WzEjY/LLJwdV9mB/7eyJ1cmwiOiJodHRwczovL2xpdmUuZHVobmV0LnR2L1MyL0hMU19MSVZFL2RyZWFtdHVya25wL3BsYXlsaXN0Lm0zdTgiLCJpZCI6MzkyfQ%3D%3D/fast">Dream Türk</button>
-            <button class="channel-button" data-url="alt.xtream-ie.org/r8E7WzEjY/LLJwdV9mB/7eyJ1cmwiOiJodHRwczovL21lZGlhLmZpbmVzdC50di9obHMvbGl2ZS5tM3U4IiwiaWQiOjQxMH0%3D/fast">Finest Tv</button>
-            <button class="channel-button" data-url="alt.xtream-ie.org/r8E7WzEjY/LLJwdV9mB/7eyJ1cmwiOiJodHRwczovL3R2c21zLmNsdWIvdHYucGhwP2thbmFsPWdlbmN0diZmaWxlPS5tM3U4IiwiaWQiOjQxNH0%3D/fast">Genç Tv</button>
-            <button class="channel-button" data-url="alt.xtream-ie.org/r8E7WzEjY/LLJwdV9mB/7eyJ1cmwiOiJodHRwczovL2VkZ2UxLnNvY2lhbHNtYXJ0LnR2L2dvbmNhdHYvYmFudDEvcGxheWxpc3QubTN1OCIsImlkIjo0MTV9/fast">Gonca Tv</button>
-            <button class="channel-button" data-url="alt.xtream-ie.org/r8E7WzEjY/LLJwdV9mB/7eyJ1cmwiOiJodHRwczovL2k0MS5vemVsaXAuY29tOjMyNjkvaHlicmlkL3BsYXkubTN1OCIsImlkIjo0MzZ9/fast">Isviçre tv</button>
-            <button class="channel-button" data-url="alt.xtream-ie.org/r8E7WzEjY/LLJwdV9mB/7eyJ1cmwiOiJodHRwczovL2xpdmUuYXJ0aWRpaml0YWxtZWR5YS5jb20vYXJ0aWRpaml0YWxfbWVyY2FudHYvbWVyY2FudHYvY2h1bmtzLm0zdTgiLCJpZCI6NDg4fQ%3D%3D/fast">Mercan Tv</button>
-            <button class="channel-button" data-url="alt.xtream-ie.org/r8E7WzEjY/LLJwdV9mB/7eyJ1cmwiOiJodHRwczovL2IwMWMwMm5sLm1lZGlhdHJpcGxlLm5ldC92aWRlb29ubHlsaXZlL210a2dldWlocmxmd2xpdmUvYnJvYWRjYXN0XzVjOWUxN2NkNTllOGIuc21pbC9wbGF5bGlzdC5tM3U4IiwiaWQiOjQ5M30%3D/fast">Nr1</button>
-            <button class="channel-button" data-url="alt.xtream-ie.org/r8E7WzEjY/LLJwdV9mB/7eyJ1cmwiOiJodHRwczovL2IwMWMwMm5sLm1lZGlhdHJpcGxlLm5ldC92aWRlb29ubHlsaXZlL210a2dldWlocmxmd2xpdmUvdV9zdHJlYW1fNWM5ZTE4ZjljZWExNV8xL3BsYXlsaXN0Lm0zdTgiLCJpZCI6NDk0fQ%3D%3D/fast">Nr1 Aşk</button>
-            <button class="channel-button" data-url="alt.xtream-ie.org/r8E7WzEjY/LLJwdV9mB/7eyJ1cmwiOiJodHRwczovL2IwMWMwMm5sLm1lZGlhdHJpcGxlLm5ldC92aWRlb29ubHlsaXZlL210a2dldWlocmxmd2xpdmUvdV9zdHJlYW1fNWM5ZTE5ODc4NGJkY18xL3BsYXlsaXN0Lm0zdTgiLCJpZCI6NDk1fQ%3D%3D/fast">Nr1 Damar</button>
-            <button class="channel-button" data-url="alt.xtream-ie.org/r8E7WzEjY/LLJwdV9mB/7eyJ1cmwiOiJodHRwczovL2IwMWMwMm5sLm1lZGlhdHJpcGxlLm5ldC92aWRlb29ubHlsaXZlL210a2dldWlocmxmd2xpdmUvdV9zdHJlYW1fNWM5ZTJhYThhY2Y0NF8xL3BsYXlsaXN0Lm0zdTgiLCJpZCI6NDk2fQ%3D%3D/fast">Nr1 Dance</button>
-            <button class="channel-button" data-url="alt.xtream-ie.org/r8E7WzEjY/LLJwdV9mB/7eyJ1cmwiOiJodHRwczovL2IwMWMwMm5sLm1lZGlhdHJpcGxlLm5ldC92aWRlb29ubHlsaXZlL210a2dldWlocmxmd2xpdmUvYnJvYWRjYXN0XzVjOWUxODc3NzAxNDMuc21pbC9wbGF5bGlzdC5tM3U4IiwiaWQiOjQ5N30%3D/fast">Nr1 Türk</button>
-            <button class="channel-button" data-url="alt.xtream-ie.org/r8E7WzEjY/LLJwdV9mB/7eyJ1cmwiOiJodHRwczovL2xpc3Rlbi5wb3dlcmFwcC5jb20udHIvcHR1cmtha3VzdGlrL2FrdXN0aWsuc21pbC9tYXN0ZXIubTN1OCIsImlkIjo1MDJ9/fast">Powera Akustik</button>
-            <button class="channel-button" data-url="alt.xtream-ie.org/r8E7WzEjY/LLJwdV9mB/7eyJ1cmwiOiJodHRwczovL2xpc3Rlbi5wb3dlcmFwcC5jb20udHIvZGFuY2UvZGFuY2Uuc21pbC9tYXN0ZXIubTN1OCIsImlkIjo1MDN9/fast">Power Dance</button>
-            <button class="channel-button" data-url="alt.xtream-ie.org/r8E7WzEjY/LLJwdV9mB/7eyJ1cmwiOiJodHRwczovL2xpc3Rlbi5wb3dlcmFwcC5jb20udHIvcGxvdmUvbG92ZS5zbWlsL21hc3Rlci5tM3U4IiwiaWQiOjUwNH0%3D/fast">Power Love</button>
-            <button class="channel-button" data-url="alt.xtream-ie.org/r8E7WzEjY/LLJwdV9mB/7eyJ1cmwiOiJodHRwczovL2xpc3Rlbi5wb3dlcmFwcC5jb20udHIvcHR1cmtzbG93L3Nsb3cuc21pbC9tYXN0ZXIubTN1OCIsImlkIjo1MDV9/fast">Power Slow</button>
-            <button class="channel-button" data-url="alt.xtream-ie.org/r8E7WzEjY/LLJwdV9mB/7eyJ1cmwiOiJodHRwczovL2xpc3Rlbi5wb3dlcmFwcC5jb20udHIvcHR1cmt0YXB0YXplL3RhcHRhemUuc21pbC9tYXN0ZXIubTN1OCIsImlkIjo1MDZ9/fast">Power Taptaze</button>
-            <button class="channel-button" data-url="alt.xtream-ie.org/r8E7WzEjY/LLJwdV9mB/7eyJ1cmwiOiJodHRwczovL2xpdmV0di5wb3dlcmFwcC5jb20udHIvcG93ZXJ0dXJrVFYvcG93ZXJ0dXJraGQuc21pbC9tYXN0ZXIubTN1OCIsImlkIjo1MDd9/fast">Power Türk</button>
-            <button class="channel-button" data-url="alt.xtream-ie.org/r8E7WzEjY/LLJwdV9mB/7eyJ1cmwiOiJodHRwczovL2xpdmV0di5wb3dlcmFwcC5jb20udHIvcG93ZXJ0dXJrVFYvcG93ZXJ0dXJraGQuc21pbC9tYXN0ZXIubTN1OCIsImlkIjo1MDh9/fast">Power Türk Tv</button>
-            <button class="channel-button" data-url="alt.xtream-ie.org/r8E7WzEjY/LLJwdV9mB/7eyJ1cmwiOiJodHRwczovL2xpdmV0di5wb3dlcmFwcC5jb20udHIvcG93ZXJUVi9wb3dlcmhkLnNtaWwvbWFzdGVyLm0zdTgiLCJpZCI6NTA5fQ%3D%3D/fast">Power Tv</button>
-            <button class="channel-button" data-url="alt.xtream-ie.org/r8E7WzEjY/LLJwdV9mB/7eyJ1cmwiOiJodHRwczovL3R2c21zLmNsdWIvdHYucGhwP2thbmFsPXNpbGF0diZmaWxlPS5tM3U4IiwiaWQiOjUyMH0%3D/fast">Sılatv</button>
-            <button class="channel-button" data-url="alt.xtream-ie.org/r8E7WzEjY/LLJwdV9mB/7eyJ1cmwiOiJodHRwczovL2xpdmUuYXJ0aWRpaml0YWxtZWR5YS5jb20vYXJ0aWRpaml0YWxfdGVtcG90di90ZW1wb3R2L3BsYXlsaXN0Lm0zdTgiLCJpZCI6NTMzfQ%3D%3D/fast">Tempot Tv</button>
-            <button class="channel-button" data-url="alt.xtream-ie.org/r8E7WzEjY/LLJwdV9mB/7eyJ1cmwiOiJodHRwczovL3R2c21zLmNsdWIvdHZ6LnBocD9rYW5hbD10b3Bwb3AmZmlsZT0ubTN1OCIsImlkIjo1NDR9/fast">Top Pop</button>
-            <button class="channel-button" data-url="alt.xtream-ie.org/r8E7WzEjY/LLJwdV9mB/7eyJ1cmwiOiJodHRwczovL3R2c21zLmNsdWIvdHYucGhwP2thbmFsPXpleW5vdHYmZmlsZT0ubTN1OCIsImlkIjo1OTJ9/fast">Zeyno Tv</button>
+<marquee>Bu Sayfa &nbsp&nbsp  <strong>VLC</strong> &nbsp&nbsp&nbsp  veya &nbsp &nbsp&nbsp  <strong>Oplayer</strong> &nbsp&nbsp   Ile Çalışır</marquee>
+
             <button class="channel-button" data-url="stream.tvcdn.net/muzik/dream-turk.m3u8">Dream Turk</button>
             <button class="channel-button" data-url="stream.tvcdn.net/muzik/kral-pop-tv.m3u8">Kral Pop</button>
             <button class="channel-button" data-url="stream.tvcdn.net/muzik/milyon-tv.m3u8">Milyon TV</button>
