--- a/Ana-Dosya/20-Test-Sayfasi/18-Test/8-Test-Bein/index.html
+++ b/Ana-Dosya/20-Test-Sayfasi/18-Test/8-Test-Bein/index.html
@@ -25,8 +25,8 @@
         
         <div class="channel-grid">
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br><br><br>
+
+
 
  
 
@@ -60,7 +60,7 @@
             <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/kardes-tv.m3u8">Kardes TV</button>
             <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/bal-tv.m3u8">Bal TV</button>
             <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/just-vogue-tv.m3u8">Just Vogue</button>
-            <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/nef-tv.m3u8">Nef TV</button>
+            <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/nef-tv.m3u8">Nef TV<h5>( Geç Açılıyor  )<h5></button>
             <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/deniz-radyo-tv.m3u8">Deniz Radyo</button>
             <button class="channel-button" data-url="stream.tvcdn.net/diger-eglence/superturk-tv.m3u8">SuperTurk </button>
 
