--- a/Ana-Dosya/20-Test-Sayfasi/18-Test/8-Test-Bein/index.html
+++ b/Ana-Dosya/20-Test-Sayfasi/18-Test/8-Test-Bein/index.html
@@ -2,33 +2,26 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Turis Tv</title>
+  <title>Untitled</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
 <!DOCTYPE html>
-<html lang="En">
+<html lang="fr">
 <head>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Turis Tv</title>
+    <title>Shout Bein - 9 Chaînes</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-
     <div class="launcher-container">
-        <h1 class="launcher-title">Turis Tv</h1>
+        <h1 class="launcher-title">Muzik</h1>
         
         <div class="channel-grid">
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
-
-
- 
 
 <marquee>Bu Sayfa &nbsp&nbsp  <strong>VLC</strong> &nbsp&nbsp&nbsp  veya &nbsp &nbsp&nbsp  <strong>Oplayer</strong> &nbsp&nbsp   Ile Çalışır</marquee>
 
@@ -60,14 +53,11 @@
             <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/kardes-tv.m3u8">Kardes TV</button>
             <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/bal-tv.m3u8">Bal TV</button>
             <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/just-vogue-tv.m3u8">Just Vogue</button>
-            <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/nef-tv.m3u8">Nef TV<h6>( Geç Açılıyor  )<h6></button>
+            <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/nef-tv.m3u8">Nef TV</button>
             <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/deniz-radyo-tv.m3u8">Deniz Radyo</button>
             <button class="channel-button" data-url="stream.tvcdn.net/diger-eglence/superturk-tv.m3u8">SuperTurk </button>
-
-
         </div>
     </div>
-
 
 
     <script src="script.js"></script>
