--- a/Ana-Dosya/20-Test-Sayfasi/18-Test/8-Test-Bein/index.html
+++ b/Ana-Dosya/20-Test-Sayfasi/18-Test/8-Test-Bein/index.html
@@ -32,30 +32,20 @@
             <button class="channel-button" data-url="stream.tvcdn.net/muzik/tatlises-tv.m3u8">Tatlises TV</button>
             <button class="channel-button" data-url="stream.tvcdn.net/muzik/tmb.m3u8">TMB</button>
             <button class="channel-button" data-url="stream.tvcdn.net/muzik/number-1-damar.m3u8">Number1 Damar</button>
-            <button class="channel-button" data-url="stream.tvcdn.net/muzik/muzik-tv.m3u8">MUZIK TV</button>
             <button class="channel-button" data-url="stream.tvcdn.net/muzik/chill-tv.m3u8">Chill TV</button>
-            <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/damar-web-tv.m3u8">Damar Web TV</button>
-            <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/arabesk-web-tv.m3u8">Arabesk Web TV</button>
+            <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/damar-web-tv.m3u8">Damar Web TV<h6>Geç Açılıyor<h6></button>
+            <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/arabesk-web-tv.m3u8">Arabesk Web TV<h6>Geç Açılıyor<h6></button>
             <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/sila-tv.m3u8">Diyer-MUZIK</button>
             <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/zeyno.m3u8">Zeyno</button>
-            <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/dost-web-tv.m3u8">Dost Web TV</button>
+            <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/dost-web-tv.m3u8">Dost Web TV</but <h6>Geç Açılıyor<h6></button>
             <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/toppop-tv.m3u8">Toppop TV</button>
-            <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/ezo-tv.m3u8">Ezo TV</button>
             <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/genc-sms-tv.m3u8">SMS TV</button>
             <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/finest-tv.m3u8">Finest TV</button>
-            <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/yansima-muzik-tv.m3u8">Yansima MUZIK</button>
-            <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/demirci-tv.m3u8">Demirci TV</button>
             <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/fora-muzik.m3u8">Fora MUZIK</button>
-            <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/genc-kral-tv.m3u8">Genc Krallar</button>
             <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/mega-tv-iskenderun.m3u8">Mega TV</button>
             <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/demo-tv.m3u8">Demo TV</button>
-            <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/seda-tv.m3u8">Seda TV</button>
             <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/ceyhan-tv.m3u8">Ceyhan TV</button>
-            <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/kardes-tv.m3u8">Kardes TV</button>
-            <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/bal-tv.m3u8">Bal TV</button>
-            <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/just-vogue-tv.m3u8">Just Vogue</button>
             <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/nef-tv.m3u8">Nef TV</button>
-            <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/deniz-radyo-tv.m3u8">Deniz Radyo</button>
             <button class="channel-button" data-url="stream.tvcdn.net/diger-eglence/superturk-tv.m3u8">SuperTurk </button>
         </div>
     </div>
