--- a/Ana-Dosya/20-Test-Sayfasi/18-Test/8-Test-Bein/index.html
+++ b/Ana-Dosya/20-Test-Sayfasi/18-Test/8-Test-Bein/index.html
@@ -22,10 +22,10 @@
         <h1 class="launcher-title">Muzik</h1>
         
         <div class="channel-grid">
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
 <marquee>Bu Sayfa &nbsp&nbsp  <strong>VLC</strong> &nbsp&nbsp&nbsp  veya &nbsp &nbsp&nbsp  <strong>Oplayer</strong> &nbsp&nbsp   Ile Çalışır</marquee>
 
+       </div>
             <button class="channel-button" data-url="stream.tvcdn.net/muzik/dream-turk.m3u8">Dream Turk</button>
             <button class="channel-button" data-url="stream.tvcdn.net/muzik/kral-pop-tv.m3u8">Kral Pop</button>
             <button class="channel-button" data-url="stream.tvcdn.net/muzik/milyon-tv.m3u8">Milyon TV</button>
@@ -37,7 +37,7 @@
             <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/arabesk-web-tv.m3u8">Arabesk Web TV<h6>Geç Açılıyor<h6></button>
             <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/sila-tv.m3u8">Diyer-MUZIK</button>
             <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/zeyno.m3u8">Zeyno</button>
-            <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/dost-web-tv.m3u8">Dost Web TV</but <h6>Geç Açılıyor<h6></button>
+            <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/dost-web-tv.m3u8">Dost Web</but <h6>Geç Açılıyor<h6></button>
             <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/toppop-tv.m3u8">Toppop TV</button>
             <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/genc-sms-tv.m3u8">SMS TV</button>
             <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/finest-tv.m3u8">Finest TV</button>
@@ -47,6 +47,7 @@
             <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/ceyhan-tv.m3u8">Ceyhan TV</button>
             <button class="channel-button" data-url="stream.tvcdn.net/diger-muzik/nef-tv.m3u8">Nef TV</button>
             <button class="channel-button" data-url="stream.tvcdn.net/diger-eglence/superturk-tv.m3u8">SuperTurk </button>
+
         </div>
     </div>
 
