--- a/Ana-Dosya/20-Test-Sayfasi/Test-Menu.html
+++ b/Ana-Dosya/20-Test-Sayfasi/Test-Menu.html
@@ -369,7 +369,10 @@ background-image: -webkit-linear-gradient(top, #bc1115 100%, #000 100%);
 </button>
 
 
-
+<button onclick="window.open('http://action_exit')">
+<img src="https://od.lk/s/OTFfMjkxMTE0NDBf/VlP3Vv%20%283%29.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
+<h2>Exit</h2>
+</button>
 
 </div>
 
