--- a/Ana-Dosya/20-Test-Sayfasi/19-Test/index.html
+++ b/Ana-Dosya/20-Test-Sayfasi/19-Test/index.html
@@ -141,7 +141,7 @@
 <br>
 <marquee>Bu Sayfa &nbsp&nbsp  <strong>VLC</strong> &nbsp&nbsp&nbsp  veya &nbsp &nbsp&nbsp  <strong>OPlayer</strong> &nbsp&nbsp   Ile Çalışır</marquee><br><br><br>
             <ul id="menuList">
-            <button class="channel-button" data-url="stream.tvcdn.net/muzik/dream-turk.m3u8">mula</button>
+            <button class="channel-button" data-url="stream.tvcdn.net/muzik/dream-turk.m3u8">mulayim<h6>Gec Aciliyor<h6></button>
             <button class="channel-button" data-url="stream.tvcdn.net/muzik/kral-pop-tv.m3u8">Kral Pop</button>
 <div>
             <button class="channel-button" data-url="stream.tvcdn.net/muzik/dream-turk.m3u8">Dream Turk</button>
