--- a/Ana-Dosya/20-Test-Sayfasi/Test-Menu.html
+++ b/Ana-Dosya/20-Test-Sayfasi/Test-Menu.html
@@ -375,6 +375,11 @@ background-image: -webkit-linear-gradient(top, #bc1115 100%, #000 100%);
 </button>
 
 
+<button onclick="window.open('22-Test/index.html')">
+<img src="https://od.lk/s/OTFfMjkxMTE0NDBf/VlP3Vv%20%283%29.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
+<h2>22-Test</h2>
+</button>
+
 
 
 <button onclick="window.open('http://action_exit')">
